Migrate to .NET 10 and update for Kubo 0.39+ parity
- Update target frameworks to net10.0
- Replace BouncyCastle.NetCore with BouncyCastle.Cryptography
- Update NuGet packages to latest versions
- Add MFS and Filestore API interfaces to ICoreApi
- Add trickle DAG option to AddFileOptions
- Update multibase algorithm registry
- Update test infrastructure

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,3 @@
 <Project>
-
-  <PropertyGroup>
-    <Nullable>enable</Nullable>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <langversion>10.0</langversion>
-  </PropertyGroup>
-
+  <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)..\'))" />
 </Project>
