--- a/test/IpfsCoreTests.csproj
+++ b/test/IpfsCoreTests.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0</TargetFrameworks>
+    <TargetFramework>net10.0</TargetFramework>
     <langversion>13.0</langversion>
 
     <IsPackable>false</IsPackable>
@@ -11,9 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" PrivateAssets="all" />
-  <PackageReference Include="MSTest.TestAdapter" Version="3.10.2" PrivateAssets="all" />
-  <PackageReference Include="MSTest.TestFramework" Version="3.10.2" PrivateAssets="all" />
+  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" PrivateAssets="all" />
+  <PackageReference Include="MSTest.TestAdapter" Version="4.1.0" PrivateAssets="all" />
+  <PackageReference Include="MSTest.TestFramework" Version="4.1.0" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
